[package]
name = "quickgpt"
version = "0.0.0"
description = "A faster way to ask GPT"
authors = ["David Jiménez <dubisdev@gmail.com>"]
license = ""
repository = "https://github.com/dubisdev/quickgpt/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file", "global-shortcut-all", "path-all", "shell-open", "window-hide", "window-set-focus", "window-set-size", "window-show", "window-start-dragging"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
